--- a/_posts/2016-08-15-tree-use.md
+++ b/_posts/2016-08-15-tree-use.md
@@ -1,12 +1,12 @@
 ---
 layout: post
 title: tree工具的使用
-category: Category
-tags: [Tool]
+category: Tool
+<!--tags: [Tool]-->
 ---
 
 
-> Mac用户可以使用homebrew安装tree
+> 使用tree命令来查看当前目录下的目录树结构,Mac用户可以使用homebrew安装tree
 
 
 ```objective-c
@@ -17,10 +17,15 @@ brew install tree
 ## 命令
 
 * -a 显示所有文件和目录。
+
 * -A 使用ASNI绘图字符显示树状图而非以ASCII字符组合。
+
 * -C 在文件和目录清单加上色彩，便于区分各种类型。
+
 * -d 显示目录名称而非内容。
+
 * -D 列出文件或目录的更改时间。
+
 * -f 在每个文件或目录之前，显示完整的相对路径名称。
 
 * -F 在执行文件，目录，Socket，符号连接，管道名称名称，各自加上"*","/","=","@","|"号。
