--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -6,9 +6,9 @@ tags: [Tool]
 
 ---
 
+* OSX系统下强大的包管理工具使用教程
 
-
-## Homebrew
+## 1.Homebrew
 
 
 安装方法详见官方文档：[Homebrew中文页](http://brew.sh/index_zh-cn.html)
@@ -26,7 +26,7 @@ brew doctor // 检查homebrew各个模块是否正常
 
 
 
-## 目录树结构工具tree
+## 2.目录树结构工具tree
 
 
 ```
@@ -41,7 +41,7 @@ brew install tree
 * -d 显示目录名称而非内容。
 * -D 列出文件或目录的更改时间。
 * -f 在每个文件或目录之前，显示完整的相对路径名称。
-* -F 在执行文件，目录，Socket，符号连接，管道名称名称，各自加上"*","/","=","@","|"号。
+* -F 在执行文件，目录，Socket，符号连接，管道名称名称，各自加上"*","/","=","@","/|"号。
 * -g 列出文件或目录的所属群组名称，没有对应的名称时，则显示群组识别码。
 * -i 不以阶梯状列出文件或目录名称。
 * -I 不显示符合范本样式的文件或目录名称。
@@ -59,7 +59,7 @@ brew install tree
 
 
 
-## 代码统计工具Cloc
+## 3.代码统计工具Cloc
 
 
 ```
@@ -74,7 +74,7 @@ cloc .
 ```
 
 
-## Node.js工具
+## 4.Node.js工具
 
 ```
 brew install node
