--- a/_posts/2016-08-25/2016-08-25-git study.md
+++ b/_posts/2016-08-25/2016-08-25-git study.md
@@ -326,7 +326,7 @@ git push -u origin master
 
 ## 命令图表
 
-![常用命令](./posts/2016-08-25/2016-08-25-git study img.png)
+![常用命令](./posts/2016-08-25/gitStudyImg.png)
 
 
 ## 其他资源
