--- a/_posts/2016-08-29-mac study.md
+++ b/_posts/2016-08-29-mac study.md
@@ -13,8 +13,10 @@ tags: [Resource]
 
 ## 常用操作
 
-### 隐藏文件显影
 
+### 1.文件操作
+
+* 隐藏文件显影
 
 ```
 defaults write com.apple.finder AppleShowAllFiles -bool true // 显示
@@ -22,6 +24,51 @@ defaults write com.apple.finder AppleShowAllFiles -bool false // 隐藏
 ``` 
 
 终端输入后重启Finder即可
+
+
+* 删除文件
+
+```
+rm XXX       // 删除文件
+rm -rf XXX   // 删除整个文件夹
+```
+
+* 目录
+
+```
+cd ~  // 回到用户根目录
+cd .. // 回到上一目录 
+```
+
+### 2.系统操作
+
+
+* 启动与退出
+
+```
+shutdown - r now // 重启 Mac OS X
+shutdown now     // 关闭 Mac OS X
+``` 
+
+* 电源管理
+
+```
+pmset -g                   // 获取当前电源管理设置的信息
+sudo pmset displaysleep 15 // 设置显示器无活动15分钟后关闭
+sudo pmset sleep 30        // 让计算机在无活动30分钟后休眠
+```
+
+* 外观
+
+```
+// 禁用仪表盘
+defaults write com.apple.dashboard mcx-disabled -boolean YES
+// 启用仪表盘
+defaults write com.apple.dashboard mcx-disabled -boolean NO
+```
+
+### 3.网络
+
 
 
 
