--- a/_posts/2016-08-29-mac study.md
+++ b/_posts/2016-08-29-mac study.md
@@ -19,26 +19,41 @@ tags: [Resource]
 * 隐藏文件显影
 
 ```
+// 终端输入后重启Finder即可
 defaults write com.apple.finder AppleShowAllFiles -bool true // 显示
 defaults write com.apple.finder AppleShowAllFiles -bool false // 隐藏
 ``` 
 
-终端输入后重启Finder即可
-
-
 * 删除文件
 
 ```
-rm XXX       // 删除文件
-rm -rf XXX   // 删除整个文件夹
+rm XXX            // 删除文件
+rm -rf XXX        // 删除整个文件夹
 ```
 
 * 目录
 
 ```
-cd ~  // 回到用户根目录
-cd .. // 回到上一目录 
+cd ~          // 回到用户根目录
+cd ..         // 回到上一目录 
 ```
+
+* 文件编辑
+
+```
+touch abc.txt      // 创建 abc.txt 文件
+vim abc.txt        // vim编辑 abc.txt 
+:wq				   // vim保存并退出
+:x                 // vim直接退出
+nano abc.txt 	   // nano编辑 abc.txt 
+```
+
+* 将文件转成 HTML，支持格式包括 Text, .RTF, .DOC.
+
+```
+textutil -convert html file.extension
+```
+
 
 ### 2.系统操作
 
@@ -46,16 +61,16 @@ cd .. // 回到上一目录
 * 启动与退出
 
 ```
-shutdown - r now // 重启 Mac OS X
-shutdown now     // 关闭 Mac OS X
+shutdown - r now      // 重启 Mac OS X
+shutdown now          // 关闭 Mac OS X
 ``` 
 
 * 电源管理
 
 ```
-pmset -g                   // 获取当前电源管理设置的信息
-sudo pmset displaysleep 15 // 设置显示器无活动15分钟后关闭
-sudo pmset sleep 30        // 让计算机在无活动30分钟后休眠
+pmset -g                      // 获取当前电源管理设置的信息
+sudo pmset displaysleep 15    // 设置显示器无活动15分钟后关闭
+sudo pmset sleep 30           // 让计算机在无活动30分钟后休眠
 ```
 
 * 外观
@@ -69,11 +84,51 @@ defaults write com.apple.dashboard mcx-disabled -boolean NO
 
 ### 3.网络
 
+* 检测某个主机是否运行HTTP服务或网络是否可用
+
+```
+curl -I www.baidu.com | head -n 1
+```
+
+* 查看当前登录的mac用户
+
+```
+w
+```
+
+* 使用 dig 来诊断域名信息
+
+```
+dig www.oschina.net A
+dig www.oschina.net MX
+```
+
+* 查看网络及相关信息
+
+```
+netstat -r        // 显示系统路由表
+netstat -an       // 显示活动网络连接
+netstat -s        // 显示网络统计
+```
+
+### 4.其他常用
+
+```
+history            // 查看终端输入历史
+clear              // 清空bash输入框
+```
+
+
+### 5.iTunes相关
+
+```
+defaults write com.apple.iTunes invertStoreLinks -bool YES  // 更改 iTunes 链接行为为本机 iTunes 库，而不是 iTunes Store
+defaults write com.apple.iTunes invertStoreLinks -bool NO  // 更改 iTunes 链接行为为 iTunes Store，而不是本机 iTunes 库
+```
 
 
 
-
-## 终端命令
+## 终端学习
 
 
 众所周知，mac上的OS X与Linux系统都是类Unix系统，在使用mac进行开发时，终端命令有许多共通之处。本篇对Linux与OS X之间的区别不再概述，由于网络上提供大多为Linux学习教程，在此记录部分Linux命令，在mac上使用的可行性则自行尝试。
@@ -95,7 +150,7 @@ defaults write com.apple.dashboard mcx-disabled -boolean NO
 
 * [Linux下载站](http://www.linuxdown.net/)
 
-
+* [Linux运维笔记](https://blog.linuxeye.com/)
 
 ### 2.Linux学习路线
 
