--- a/_posts/2016-08-29-mac study.md
+++ b/_posts/2016-08-29-mac study.md
@@ -46,6 +46,8 @@ rm -rf XXX        // 删除整个文件夹
 * 目录
 
 ```
+pwd           // 当前目录路径
+open .        // 打开当前目录
 cd ~          // 回到用户根目录
 cd ..         // 回到上一目录 
 ```
