--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -17,12 +17,26 @@ github地址：[Homebrew/brew](https://github.com/Homebrew/brew)
 
 组织：[Homebrew](https://github.com/Homebrew)
 
+
 ### 常用命令
 
 ```
-brew update // 更新homebrew
-brew doctor // 检查homebrew各个模块是否正常
+brew install XXX      // 安装
+brew uninstall XXX    // 卸载
+brew search /XXX*/    // brew查询某软件
+
+brew update           // 更新homebrew
+brew doctor           // 检查homebrew各个模块是否正常
 ```
+
+```
+brew list       // 列出已安装的软件
+brew update     // 更新brew
+brew home       // 用浏览器打开brew的官方网站
+brew info       // 显示软件信息
+brew deps       // 显示包依赖
+```
+
 
 
 
@@ -79,3 +93,5 @@ cloc .
 ```
 brew install node
 ```
+
+
