--- a/_posts/2016-08-25-git study.md
+++ b/_posts/2016-08-25-git study.md
@@ -21,56 +21,201 @@ tags: [Resource]
 
 ## 常用命令
 
-### 1.远程仓库相关命令
+### 1.快速查阅
 
-检出仓库克隆至本地
+* 原理
 
-```
-git clone git://github.com/jquery/jquery.git
-```
+![原理](http://silverbulletzyp.github.io/img/2016-08-25/gitPrinciple.jpeg)
 
-查看远程仓库地址
 
-```
-git remote -v
-```
+* 基础
 
-添加远程仓库
+![常用命令](http://silverbulletzyp.github.io/img/2016-08-25/gitSpeed.jpeg)
 
-```
-git remote add [name] [url]
-```
 
-删除远程仓库
+### 2.设置
+
+* config
+
 
 ```
-git remote rm [name]
+// 配置全局用户名
+git config --global user.name XXX
+// 配置全局电子邮箱
+git config --global user.email XXX
+// 显示所有配置信息
+git config --list
+// 注：若不要“--global”或者将“global”改为“local”则表示配置局部用户名
 ```
 
-修改远程仓库
+* help
+
 
 ```
-git remote set-url --push [name] [newUrl]
+git help
 ```
 
-拉取远程仓库
+
+### 3.基本操作
+
+* 初始化与克隆
 
 ```
-git pull [remoteName] [localBranchName]
+git init		// 在本地初始化一个git仓库
+git clone XXX	// 从远程服务器克隆一个仓库到本地
 ```
 
-推送远程仓库
+* add命令
 
 ```
-git push [remoteName] [localBranchName]
+git add XXX		// 添加工作目录的文件到暂存区
+git add -A		// 添加工作目录的所有文件到暂存区
 ```
 
-提交本地分支到远程仓库
+
+* status命令 - 显示工作树的状态
 
 ```
-git push origin test:master     // 提交本地test分支作为远程的master分支
-git push origin test:test       // 提交本地test分支作为远程的test分支
+git status
 ```
+
+|类型|解释|
+|Untracked files|未被跟踪的文件，表示是工作目录新增加的文件|
+|Changes not staged for commit|工作目录中修改了文件，但是没有被添加到暂存区|
+|Changes to be committed|添加到暂存区的文件，等待提交|
+
+
+* commit命令 - 提交消息
+
+```
+git commit -m "XXX"								// ①
+git commit -a -m "XXX"							// ②
+git commit --author=name -m "XXX"				// ③
+git commit --date=06.13.2016T09:00:00 -m "XXX"	// ④
+git commit --amend -m "XXX"						// ⑤
+```
+
+① 提交暂存区的文件，带有提交消息
+
+② 跳过暂存区，直接提交工作目录中所有改变的文件，但是不能提交工作目录中新增的文件
+
+③ 提交暂存区的文件，并重写提交作者
+
+④ 提交暂存区的文件，并重写提交日期
+
+⑤ 通过创建一个新的提交，以替换当前分支的前端。所代表的含义就是在最新一次提交的基础上进行提交。比如我们完成了最新一次提交，并且这次提交完成后我们对工作目录进行了一些修改，但是我们发现某个文件忘了添加到暂存区并提交，我们可以先添加该文件到暂存区，然后利用该命令进行提交。
+
+
+* reset命令
+
+
+```
+git reset
+git reset <commit> files
+git reset [--hard|soft|mixed|merge|keep] [<commit>]：
+```
+① 将暂存区的所有文件重置到当前分支的HEAD
+
+② 将暂存区的指定文件重置到指定的<commit>,<commit>既可以是commit的hash（或者hash前7位）也可以是HEAD及其祖先，HEAD~1表示HEAD的父亲，是HEAD的前一次提交，没有<commit>时默认是HEAD。
+
+③ 将当前的分支重设到指定的<commit>，并且根据mode有可能更新暂存区和工作目录。mode的取值可以是hard、soft、mixed、merged、keep。
+
+	hard：重置暂存区与工作目录到指定提交，删除<commit>之后的所有提交并将HEAD指向该提交，此操作危险指数较大（应慎用）
+	
+	soft：暂存区与工作目录不会变化，仅仅删除<commit>之后的所有提交并将HEAD指向该提交
+	
+	mixed：默认的，重置暂存区到指定提交，删除<commit>之后的所有提交并将HEAD指向该提交
+	
+	merge与keep用的比较少，暂时不讨论
+
+
+注：HEAD是指向当前分支引用的指针，该指针指向在该分支上的最后一个提交的指针。这意味着HEAD将是下一个创建的提交的父亲。一般来说，把你的HEAD作为你最后一次提交的快照，是最简单的。HEAD~1表示HEAD的前一次提交，HEAD~2表示HEAD的前两次提交，以此类推
+
+
+
+
+* rm命令
+
+
+```
+git rm files			// 删除工作目录的文件
+git rm -f files			// 强制删除工作目录的文件，不做更新检查
+git rm --cached files	// 删除暂存区的文件
+```
+
+* mv命令
+
+
+```
+git mv oldfile newfile		// 为文件重命名
+git mv files dir			// 移动文件到指定目录
+git mv -f oldfile newfile	// 强制为文件重命名，即使目标文件已存在
+git mv -f files dir			// 强制移动文件到指定目录名，即使目标文件已存在
+```
+
+### 4.分支与合并
+
+
+* branch命令
+
+
+```
+git branch										// 查看所有分支
+git branch branchname							// 创建分支
+git branch branchname <commit>					// 以特定提交为基创建分支
+git branch -d branchname						// 删除分支
+git branch -D branchname						// 强制删除分支
+git branch -m [oldbranchname] newbranchname	// 移动或者删除分支
+git branch -M [oldbranchname] newbranchname	// 强制移动或者删除分支
+git branch -r									// 列出所有被跟踪的远程分支
+git branch -r -d branchname						// 删除被跟踪的远程分支
+git branch -a									// 列出所有本地分支与被跟踪的远程分支
+```
+
+* checkout命令
+
+```
+git checkout						// 检查本地仓库分支与远程仓库分支的差异
+git checkout . 						// 未提交的本地所有修改返回原状态
+git checkout branchname|tagname		// 切换分支或切换到指定tag，同名时优先切换分支
+git checkout tags/tagname			// 切换到指定tag
+git checkout -b branchname			// 新建分支并切换到该分支上
+git checkout -B branchname			// 强制新建分支并切换到该分支上
+```
+
+
+
+
+### 5.远程仓库
+
+
+
+* remote命令 - 查看远程仓库
+
+```
+git remote									// 查看所有与本地仓库关联的远程仓库
+git remote -v								// 查看所有远程仓库地址
+git remote add [name] [url]					// 添加与本地仓库关联的远程仓库
+git remote rename oldname newname			// 为远程仓库重命名
+git remote remove [name]					// 移除远程仓库
+git remote set-url --push [name] [newUrl]	// 修改远程仓库
+```
+
+* 拉取远程仓库
+
+```
+// 拉取指定远程仓库指定分支到本地仓库指定分支（默认是当前分支）
+git pull [remoteName] [localBranchName] 
+```
+
+* 推送远程仓库
+
+```
+git push origin master			// 推送本地仓库主分支到远程仓库主分支
+git push origin test:master		// 提交本地test分支作为远程的master分支
+git push origin test:test		// 提交本地test分支作为远程的test分支
+```
+
  
 
 ### 2.分支(branch)相关命令
@@ -312,16 +457,6 @@ git checkout branch_1.0/master 切换到branch_1.0/master分支
 du -hs
 ```
 
-```
-mkdir WebApp
-cd WebApp
-git init
-touch README
-git add README
-git commit -m 'first commit'
-git remote add origin git@github.com:daixu/WebApp.git
-git push -u origin master
-```
 
 
 ## 命令图表
