--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -95,3 +95,16 @@ brew install node
 ```
 
 
+## 5.autojump直达目录
+
+```
+brew install autojump
+```
+
+快捷键为`j`
+
+安装完后在`~/.zshrc`里修改`plugins=`，添加一个`autojump`，修改完后在当前shell立即生效
+
+```
+source ~/.zshrc
+```
