--- a/_posts/2016-09-26-iTerm2.md
+++ b/_posts/2016-09-26-iTerm2.md
@@ -1,33 +1,187 @@
 ---
 layout: post
-title: Mac上最好用的终端iTerms
+title: Mac上最好用的终端iTerm2
 category: Tool
 tags: [Tool]
 
 ---
 
 
-> 列举常用快捷键
+> Mac自带的终端已经十分强大，作为工具控怎么能不关心最常用的命令行呢，我们现在使用`iTerm2 + oh my zsh`的配置方式让终端焕然一新
+
+## iTerm2
+
+* iTerm2 - Mac上最好的GUI终端
 
 ### 下载
 
-[官方地址](http://iterm2.com/)
+[iTerm2官方地址](http://iterm2.com/)
+
+* 主题设置
+
+`Preferences` -> `Profiles` -> `Default` -> `Colors` -> `Load Presets`
+
+[优秀主题](http://ethanschoonover.com/solarized)
+
+[主题大全](http://iterm2colorschemes.com/)
 
 
 ### 常用快捷键
 
-|常用						|				|
-|`command + f`				|查找			|
-|`command + ;`				|自动补全			|
-|`command + shift + h`		|显示历史			|
-|窗口						|				|
-|`command + t`				|新建页面			|
-|`command + n`				|新建窗口			|
-|`command + ←、→、{、}`		|切换页面			|
-|`command + shift + d`		|水平分隔			|
-|`command + d`				|垂直分隔			|
-|`command + option + e`		|展示所有窗口		|
-|其他						|				|
-|`command + /`				|高亮当前鼠标的位置|
+|常用						|					|
+|`command + f`				|查找				|
+|`command + ;`				|自动补全				|
+|`command + shift + h`		|显示历史				|
+|`command + r`				|清屏				|
+|窗口						|					|
+|`command + t`				|新建页面				|
+|`command + n`				|新建窗口				|
+|`command + ←、→、{、}`		|切换页面				|
+|`command + shift + d`		|水平分隔				|
+|`command + d`				|垂直分隔				|
+|`command + option + e`		|展示所有窗口			|
+|`command + enter`			|切换全屏				|
+|`command + 数字`			|切换标签页			|
+|其他						|					|
+|`command + /`				|高亮当前鼠标的位置	|
+|`command + option + b`		|时间轴快照返回		|
+
+
+## oh my zsh
+
+* oh my zsh - 以最简洁的0学习成本使用最强大的shell版本zsh
+
+### 简介
+
+* 系统默认shell
+
+```
+cat /etc/shells
+```
+
+显示如下
+
+```
+/bin/bash
+/bin/csh
+/bin/ksh
+/bin/sh
+/bin/tcsh
+/bin/zsh
+```
+
+zsh为终极shell，配置复杂，国外有个穷极无聊的程序员开发出了一个能够让你快速上手的zsh项目，叫做"oh my zsh"
+
+[oh my zsh](https://github.com/robbyrussell/oh-my-zsh)
+
+如果你懒得去github下载，直接复制下面这货到命令行进行安装
+
+```
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+```
+
+安装完后系统默认使用zsh的shell，并且可以查看版本
+
+```
+zsh --version
+```
+
+
+### 使用
+
+安装完后会提示你查看`~/.zshrc`，你可以在这个文件里新增别名设置，比如使用vim去打开某些文件：
+
+```
+alias cls='clear'
+alias ll='ls -l'
+alias la='ls -a'
+alias vi='vim'
+alias javac="javac -J-Dfile.encoding=utf8"
+alias grep="grep --color=auto"
+alias -s html=mate   # 在命令行直接输入后缀为 html 的文件名，会在 TextMate 中打开
+alias -s rb=mate     # 在命令行直接输入 ruby 文件，会在 TextMate 中打开
+alias -s py=vi       # 在命令行直接输入 python 文件，会用 vim 中打开，以下类似
+alias -s js=vi
+alias -s c=vi
+alias -s java=vi
+alias -s txt=vi
+alias -s gz='tar -xzvf'
+alias -s tgz='tar -xzvf'
+alias -s zip='unzip'
+alias -s bz2='tar -xjvf'
+```
+
+具体设置可以查看[终极Shell-ZSH](https://zhuanlan.zhihu.com/p/19556676)
+
+
+备注：
+
+```
+chsh -s /bin/zsh	// 修改当前shell为zsh
+echo $SHELL			// 查看当前shell
+```
+
+
+### 主题
+
+
+默认使用
+
+```
+ZSH_THEME="robbyrussell"
+```
+
+`oh my zsh`自带的主题存放在目录`~/.oh-my-zsh/themes`中
+
+我们可以在`./zshrc`快速修改并查看
+
+```
+ZSH_THEME="lambda"
+echo $ZSH_THEME
+```
+
+在此献上所有主题的样式预览[oh my zsh主题](https://github.com/robbyrussell/oh-my-zsh/wiki/Themes)
+
+
+备注：
+
+```
+DISABLE_AUTO_UPDATE="true" //是否自动更新
+```
+
+### 插件
+
+* autojump - 快速跳转到目录
+
+见[autojump](http://silverbulletzyp.github.io//tool/2016/08/15/homebrew.html)第五点介绍、安装及使用
+
+* extract - 强大的解压插件
+
+```
+x		// 可解压所有类型文件
+```
+
+* sublime - 默认使用sublime打开
+
+```
+st			// 直接打开sublime
+st file_a	// 用sublime打开文件 file
+st dir_a	// 用sublime打开目录 dir
+stt			// 在sublime打开当前目录，相当于 st .
+```
+
+修改方式为`./zshrc`文件中添加需要的插件即可
+
+如`plugins=(git)`改为
+
+```
+plugins=(git autojump extract sublime)
+```
+
+修改后输入以下命令立即生效
+
+```
+source ~/.zshrc
+```
 
 
