--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -108,3 +108,13 @@ brew install autojump
 ```
 source ~/.zshrc
 ```
+
+
+## 6.Tmux终端复用软件
+
+
+```
+brew install tmux
+```
+
+详细使用参见[tmux使用](http://silverbulletzyp.github.io//tool/2016/09/26/iTerm2.html)
