--- a/_posts/2016-09-26-iTerm2.md
+++ b/_posts/2016-09-26-iTerm2.md
@@ -26,6 +26,13 @@ tags: [Tool]
 [主题大全](http://iterm2colorschemes.com/)
 
 
+* 去除粗体与颜色限制
+
+`Preferences` -> `Profiles` -> `Text` -> `Text Rendering`
+
+取消勾选`Draw bold text in bright colors`与`Draw bold text in bold font`
+
+
 ### 常用快捷键
 
 |常用						|					|
@@ -72,7 +79,7 @@ cat /etc/shells
 
 zsh为终极shell，配置复杂，国外有个穷极无聊的程序员开发出了一个能够让你快速上手的zsh项目，叫做"oh my zsh"
 
-[oh my zsh](https://github.com/robbyrussell/oh-my-zsh)
+[oh my zsh地址](https://github.com/robbyrussell/oh-my-zsh)
 
 如果你懒得去github下载，直接复制下面这货到命令行进行安装
 
@@ -183,5 +190,16 @@ plugins=(git autojump extract sublime)
 ```
 source ~/.zshrc
 ```
+
+* Tmux - 多控制台的终端复用软件
+
+使用homebrew安装Tmux
+
+[官方地址](http://tmux.github.io/)
+
+
+
+
+
 
 
