--- a/_posts/2016-09-26-iTerm2.md
+++ b/_posts/2016-09-26-iTerm2.md
@@ -11,7 +11,7 @@ tags: [Tool]
 
 ## iTerm2
 
-* iTerm2 - Mac上最好的GUI终端
+* iTerm2 - Mac上最好的终端
 
 ### 下载
 
@@ -38,6 +38,7 @@ tags: [Tool]
 |常用						|					|
 |`command + f`				|查找				|
 |`command + ;`				|自动补全				|
+|`ctrl + u`				|清空当前行				|
 |`command + shift + h`		|显示历史				|
 |`command + r`				|清屏				|
 |窗口						|					|
@@ -191,15 +192,62 @@ plugins=(git autojump extract sublime)
 source ~/.zshrc
 ```
 
-* Tmux - 多控制台的终端复用软件
+## Tmux - 多控制台的终端复用软件
 
 使用homebrew安装Tmux
 
 [官方地址](http://tmux.github.io/)
 
+安装完毕后输入`tmux`进入tmux模式
+
+* 激活控制台；此时以下按键生效
+
+```
+Ctrl+b
+```
+
+### 常用快捷键
 
 
+|系统操作||
+|? | 列出所有快捷键；按q返回|
+|d | 脱离当前会话；这样可以暂时返回Shell界面，输入tmux attach能够重新进入之前的会话|
+|D | 选择要脱离的会话；在同时开启了多个会话时使用|
+|Ctrl+z| 挂起当前会话|
+|r | 强制重绘未脱离的会话|
+|s | 选择并切换会话；在同时开启了多个会话时使用|
+|: | 进入命令行模式；此时可以输入支持的命令，例如kill-server可以关闭服务器|
+|[ | 进入复制模式；此时的操作与vi/emacs相同，按q/Esc退出|
+|~ | 列出提示信息缓存；其中包含了之前tmux返回的各种提示信息|
+|窗口操作||
+|c | 创建新窗口|
+|& | 关闭当前窗口|
+|数字键 | 切换至指定窗口|
+|p | 切换至上一窗口|
+|n | 切换至下一窗口|
+|l | 在前后两个窗口间互相切换|
+|w | 通过窗口列表切换窗口|
+|, | 重命名当前窗口；这样便于识别|
+|. | 修改当前窗口编号；相当于窗口重新排序|
+|f | 在所有窗口中查找指定文本|
+|面板操作||
+|” | 将当前面板平分为上下两块|
+|% | 将当前面板平分为左右两块|
+|x | 关闭当前面板|
+|! | 将当前面板置于新窗口；即新建一个窗口，其中仅包含当前面板|
+|Ctrl+方向键 | 以1个单元格为单位移动边缘以调整当前面板大小|
+|Alt+方向键 | 以5个单元格为单位移动边缘以调整当前面板大小|
+|Space | 在预置的面板布局中循环切换|
+|q | 显示面板编号|
+|o | 在当前窗口中选择下一面板|
+|方向键 | 移动光标以选择面板|
+|{ | 向前置换当前面板|
+|} | 向后置换当前面板|
+|Alt+o | 逆时针旋转当前窗口的面板|
+|Ctrl+o | 顺时针旋转当前窗口的面板|
 
+
+注：Space循环切换依次包括even-horizontal、even-vertical、main-horizontal、main-vertical、tiled
 
 
 
