--- a/_posts/2016-09-29-blog & bbs.md
+++ b/_posts/2016-09-29-blog & bbs.md
@@ -17,6 +17,8 @@ tags: [Resource]
 
 * [美团点评技术团队](http://tech.meituan.com/)
 
+* [听云技术博客](http://blog.tingyun.com/web/article/list/catalog/0)
+
 * [看雪学院](http://bbs.pediy.com/)
 
 
