update git study

--- a/_posts/2016-08-25-git study.md
+++ b/_posts/2016-08-25-git study.md
@@ -292,6 +292,26 @@ bin
 *.db
 ```
 
+
+### 9.自定义(Custom)
+
+* 日志
+
+自定义`git log`的显示样式
+
+```
+git log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+```
+
+或直接自定义别名`git lg`
+
+```
+git config --global alias.lg "log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'"
+```
+
+下次输出日志时直接输入`git lg`即可
+
+
 ## 应用举例
 
 ```
