--- a/_posts/2016-08-29-mac study.md
+++ b/_posts/2016-08-29-mac study.md
@@ -250,6 +250,39 @@ killall SystemUIServer				// 结束进程
 
 
 
+### 5.查询操作
+
+* find命令 
+
+unix命令，试用于OS X和Linux，格式为 **find 文件路径 参数**
+
+```
+// 在当前路径下搜索名字中包含`.md`的文件
+find ~ -iname  "*.md"
+// 在特定的路径下搜索特定的文件
+find SilverBulletZyp.github.io/_posts "*.md"
+```
+
+
+* mdfind命令 
+
+Spotlight功能的终端界面，若Spotlight功能被禁用，则mdfind也无法工作，mdfind命令非常高效迅速
+
+格式为 **mdfind -name 文件名字**
+
+```
+// 搜索本地所有的.md文件
+mdfind -name ".md"
+// 搜索本地名为fenxiang@2x文件位置
+mdfind -name fenxiang@2x
+// 搜索本地所有包含该字段的文件
+mdfind "正在连接聊天服务器"
+// 添加-onlyin参数搜索指定目录指定文件或文件字段
+mdfind -onlyin ~/company/ "正在连接聊天服务器"
+mdfind -onlyin ~/company/ plist
+```
+
+
 
 ## Linux学习
 
