--- a/_posts/2016-09-29-iOS10 & Xcode8.md
+++ b/_posts/2016-09-29-iOS10 & Xcode8.md
@@ -3,6 +3,7 @@ layout: post
 title: iOS10与Xcode8的那些事儿
 category: iOS
 tags: [iOS]
+
 ---
 
 > iPhone7的售卖意味着一波新技术的来袭。针对最新的iOS10，开发者们需要注意些什么呢
@@ -165,6 +166,11 @@ Xcode8新建工程打印时会有许多未见过的Log
 
 傻瓜式操作，更加易懂，这里不再赘述
 
+
+### 8.打印库的加载时长
+
+
+`Edit Scheme`->`Run`->`Arguments`->`Environment Variables`里添加`DYLD_PRINT_STATISTICS ＝ YES`并勾选，可以打印出App加载时长，包括整体加载时长、动态库加载时长
 
 
 
