add decompilation app

--- a/_posts/2016-10-14-Mac App.md
+++ b/_posts/2016-10-14-Mac App.md
@@ -19,14 +19,15 @@ tags: [Tool]
 
 * [PhpStorm](https://www.jetbrains.com/phpstorm/) - Php开发软件
 
-* [Atom](https://atom.io/) - github出的强大的全编程语言编辑器
+* [Atom](https://atom.io/) - github出版的强大的全编程语言编辑器
 
 
 
-## 终端
+## 配置
+
+* iHosts - 好用的host管理工具
 
 * [iTerm2](http://silverbulletzyp.github.io//tool/2016/09/26/iTerm2.html) - mac下最好用的终端
-
 
 
 
@@ -37,12 +38,29 @@ tags: [Tool]
 
 * [MacDown](http://macdown.uranusjr.com) - 免费而好用的Markdown编辑器
 
+* TextWrangler - 免费的文本编辑器
+
+* TextLab - 文本转换工具
+
+
+## 文件传输
+
+* ForkLift - 支持FTP/SFTP/SMB/WebDAV/Amazon S3/AFP
+
+* FileZilla - 支持FTP/SFTP
+
 
 ## 调试
 
 * [postman](https://www.getpostman.com/) - 强大的 Web API & HTTP 请求调试工具
 
+* Paw - 强大的接口调试工具
+
+* Charles - 强大的请求调试工具
 
 
+## 科学上网
+
+* ShadowsocksX
 
 
