--- a/_posts/2016-09-29-iOS10 & Xcode8.md
+++ b/_posts/2016-09-29-iOS10 & Xcode8.md
@@ -174,4 +174,14 @@ Xcode8新建工程打印时会有许多未见过的Log
 
 
 
+## 其他问题
+
+### 1.`too many arguments to function call`
+
+使用runtime常见，苹果不推荐使用runtime因此默认设为严格检查，解决方法：
+
+`Project` - `Build Settings` - `ENABLE_STRICT_OBJC_MSGSEND` 改为 `NO` 取消严格审核runtime消息机制
+
+
+
 
