--- a/_posts/2016-09-29-iOS10 & Xcode8.md
+++ b/_posts/2016-09-29-iOS10 & Xcode8.md
@@ -183,5 +183,26 @@ Xcode8新建工程打印时会有许多未见过的Log
 `Project` - `Build Settings` - `ENABLE_STRICT_OBJC_MSGSEND` 改为 `NO` 取消严格审核runtime消息机制
 
 
+### 2.Xcode8真机调试报错
+
+
+* 出现如下错误
+
+```
+dyld: Library not loaded: /System/Library/Frameworks/UserNotifications.framework/UserNotifications
+  Referenced from: /var/mobile/Applications/BCC39BE7-F54F-460A-963B-9238F3E0DA06/XXX.app/XXX
+  Reason: image not found
+```
+
+原因：低版本手机中，Xcode高版本Framework不支持
+
+解决方案：
+`target`->`Build Phases`->`Link Binary With Libraries`
+将`UserNotifications.framework`的`status`由`Required`修改为`Optional`
+
+
+* 启动时报错
+
+有全局断点情况设置监控为`All`，无法找到原因有情况为检测到C++报错，将监控`All`状态改为`Objective-C`即可解决
 
 
