--- a/_posts/2017-06-07-atom.md
+++ b/_posts/2017-06-07-atom.md
@@ -17,43 +17,38 @@ tags: [Tool]
 
 ## 常用操作
 
-文件切换
-	•	ctrl-shift-s：保存所有打开的文件 
-	•	cmd-shift-o：打开目录 
-	•	ctrl-0：焦点移到目录树：目录树下，使用a，m，delete来增加，修改和删除。 
-	•	cmd-t 或 cmd-p 查找文件 
-	•	cmd-b：在打开的文件之间切换 
-	•	cmd-shift-b：只搜索从上次git commit后修改或者新增的文件。 
-	•	cmd-\：显示或隐藏目录树 
-导航
-（等价于上下左右）
-	•	ctrl-p：前一行 
-	•	ctrl-n：后一行 
-	•	ctrl-f：前一个字符 
-	•	ctrl-b：后一个字符
-	•	alt-B, alt-left：移动到单词开始 
-	•	alt-F, alt-right：移动到单词末尾 
-	•	cmd-right, ctrl-E：移动到一行结束 
-	•	cmd-left, ctrl-A ：移动到一行开始 
-	•	cmd-up：移动到文件开始 
-	•	cmd-down：移动到文件结束
-	•	ctrl-g 移动到指定行 row:column 处 
-	•	cmd-r：在方法之间跳转 
-目录树操作
-	•	cmd-\或者 cmd-k cmd-b 显示(隐藏)目录树 
-	•	ctrl-0 ：焦点切换到目录树(再按一次或者Esc退出目录树) 
-	•	a：添加文件 
-	•	d：将当前文件另存为(duplicate) 
-	•	i： 显示(隐藏)版本控制忽略的文件 
-	•	alt-right 和 alt-left 展开(隐藏)所有目录 
-	•	ctrl-al-]和 ctrl-al-[ 同上 
-	•	ctrl-[ 和 ctrl-] 展开(隐藏)当前目录 
-	•	ctrl-f 和ctrl-b 同上 
-	•	cmd-k h 或者 cmd-k left 在左半视图中打开文件 
-	•	cmd-k j或者cmd-k down在下半视图中打开文件 
-	•	cmd-k k 或者cmd-k up 在上半视图中打开文件 
-	•	cmd-k l 或者cmd-k right 在右半视图中打开文件 
-	•	ctrl-shift-C： 复制当前文件绝对路径 
+* 文件切换
+
+|:---|:---|
+|ctrl-shift-s|保存所有打开的文件| |cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树：目录树下，使用a，m，delete来增加，修改和删除| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次git commit后修改或者新增的文件| |cmd-\|显示或隐藏目录树|
+
+
+* 导航 - 等价于上下左右
+
+|:---|:---|
+|ctrl-p|前一行| |ctrl-n|后一行| |ctrl-f|前一个字符| |ctrl-b|后一个字符|
+|alt-B、alt-left|移动到单词开始| |alt-F、alt-right|移动到单词末尾| |cmd-right、ctrl-E|移动到一行结束| |cmd-left、ctrl-A|移动到一行开始| |cmd-up|移动到文件开始| |cmd-down|移动到文件结束|
+|ctrl-g|移动到指定行`row:column`处| |cmd-r|在方法之间跳转| 
+
+* 目录树操作
+
+|:---|:---|
+|cmd-\或者 cmd-k cmd-b|显示(隐藏)目录树|
+|ctrl-0|焦点切换到目录树(再按一次或者Esc退出目录树)|
+|a|添加文件|
+|d|将当前文件另存为(duplicate)|
+|i|显示(隐藏)版本控制忽略的文件|
+|alt-right和 alt-left|展开(隐藏)所有目录|
+|ctrl-al-]和 ctrl-al-[|同上|
+|ctrl-[ 和 ctrl-]|展开(隐藏)当前目录|
+|ctrl-f 和ctrl-b|同上|
+|cmd-k h 或者 cmd-k left|在左半视图中打开文件|
+|cmd-k j或者cmd-k down|在下半视图中打开文件|
+|cmd-k k 或者cmd-k up|在上半视图中打开文件|
+|cmd-k l 或者cmd-k right|在右半视图中打开文件|
+|ctrl-shift-C|复制当前文件绝对路径|
+
+   
 书签
 	•	cmd-F2 在本行增加书签 
 	•	F2 跳到当前文件的下一条书签 
@@ -192,22 +187,24 @@ http://blog.csdn.net/qq_30100043/article/details/53558381
 
 
 * [atom-terminal-panel](https://atom.io/packages/atom-terminal-panel)
-* 
+
 
 
 ### php开发插件
 
-linter：实时语法检查，保证代码语法正确性。
-linter-csslint：CSS代码检查。
-linter-jshint：Javascript代码检查。
-linter-php：PHP代码检查。
-minimap: 提供代码右侧的minimap。
-vim-mode: 提供Vim编辑模式，不过只提供了命令模式和插入模式，遗憾的是还缺乏Vim的底线命令模式，这个硬伤有点大。
-css-snippets：CSS代码模板。
-javascript-snippets：Javascript代码模板。
-jquery-snippets：jQuery代码模板。
-symfony-snippets：Symfony代码模板。
-drupal：Drupal代码模板。
-web-browser：网站实时预览。
-localization：菜单汉化
+|:---|:---|
+|linter|实时语法检查，保证代码语法正确性|
+|linter-php|PHP代码检查|
+|linter-csslint|CSS代码检查|
+|linter-jshint|Javascript代码检查|
+|minimap|提供代码右侧的minimap|
+|vim-mode|提供Vim编辑模式|
+|css-snippets|CSS代码模板|
+|javascript-snippets|Javascript代码模板|
+|jquery-snippets|jQuery代码模板|
+|symfony-snippets|Symfony代码模板|
+|drupal|Drupal代码模板|
+|web-browser|网站实时预览|
+|localization|菜单汉化|
+
 
