--- a/_posts/2017-06-07-atom.md
+++ b/_posts/2017-06-07-atom.md
@@ -17,13 +17,17 @@ tags: [Tool]
 
 ## 常用操作
 
+
 * 文件切换
 
+
 |:---|:---|
-|ctrl-shift-s|保存所有打开的文件| |cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树：目录树下，使用a，m，delete来增加，修改和删除| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次git commit后修改或者新增的文件| |cmd-\|显示或隐藏目录树|
+|ctrl-shift-s|保存所有打开的文件| |cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树(目录树下，使用a，m，delete来增加，修改和删除)| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次git commit后修改或者新增的文件| |cmd-\|显示或隐藏目录树|
+
 
 
 * 导航 - 等价于上下左右
+
 
 |:---|:---|
 |ctrl-p|前一行| |ctrl-n|后一行| |ctrl-f|前一个字符| |ctrl-b|后一个字符|
@@ -33,7 +37,7 @@ tags: [Tool]
 * 目录树操作
 
 |:---|:---|
-|cmd-\或者 cmd-k cmd-b|显示(隐藏)目录树|
+|`cmd-\`或`cmd-k`,`cmd-b`|显示(隐藏)目录树|
 |ctrl-0|焦点切换到目录树(再按一次或者Esc退出目录树)|
 |a|添加文件|
 |d|将当前文件另存为(duplicate)|
@@ -43,7 +47,7 @@ tags: [Tool]
 |ctrl-[ 和 ctrl-]|展开(隐藏)当前目录|
 |ctrl-f 和ctrl-b|同上|
 |cmd-k h 或者 cmd-k left|在左半视图中打开文件|
-|cmd-k j或者cmd-k down|在下半视图中打开文件|
+|cmd-k j 或者cmd-k down|在下半视图中打开文件|
 |cmd-k k 或者cmd-k up|在上半视图中打开文件|
 |cmd-k l 或者cmd-k right|在右半视图中打开文件|
 |ctrl-shift-C|复制当前文件绝对路径|
