--- a/_posts/2017-06-07-atom.md
+++ b/_posts/2017-06-07-atom.md
@@ -22,13 +22,16 @@ tags: [Tool]
 
 * 文件切换
 
+
 |快捷键|注释|
 |:---|:---|
-|ctrl-shift-s|保存所有打开的文件| |cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树(目录树下，使用a，m，delete来增加，修改和删除)| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次git commit后修改或者新增的文件| |cmd-\|显示或隐藏目录树|
+|ctrl-shift-s|保存所有打开的文件|
+|cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树(a，m，delete增改删)| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次commit后修改的文件| |cmd-\|显示或隐藏目录树|
 
 
 
 * 导航 - 等价于上下左右
+
 
 |快捷键|注释|
 |:---|:---|
@@ -37,6 +40,7 @@ tags: [Tool]
 |ctrl-g|移动到指定行`row:column`处| |cmd-r|在方法之间跳转| 
 
 * 目录树操作
+
 
 |快捷键|注释|
 |:---|:---|
