--- a/_posts/2017-06-07-atom.md
+++ b/_posts/2017-06-07-atom.md
@@ -25,8 +25,8 @@ tags: [Tool]
 
 |快捷键|注释|
 |:---|:---|
-|ctrl-shift-s|保存所有打开的文件|
-|cmd-shift-o|打开目录| |ctrl-0|焦点移到目录树(a，m，delete增改删)| |cmd-t、cmd-p|查找文件| |cmd-b|在打开的文件之间切换| |cmd-shift-b|只搜索从上次commit后修改的文件| |cmd-\|显示或隐藏目录树|
+|`ctrl-shift-s`|保存所有打开的文件|
+|`cmd-shift-o`|打开目录| |`ctrl-0`|焦点移到目录树(a，m，delete增改删)| |`cmd-t` `cmd-p`|查找文件| |`cmd-b`|在打开的文件之间切换| |`cmd-shift-b`|只搜索从上次commit后修改的文件| |`cmd-\`|显示或隐藏目录树|
 
 
 
