--- a/_posts/2017-06-07-atom.md
+++ b/_posts/2017-06-07-atom.md
@@ -26,7 +26,12 @@ tags: [Tool]
 |快捷键|注释|
 |:---|:---|
 |`ctrl-shift-s`|保存所有打开的文件|
-|`cmd-shift-o`|打开目录| |`ctrl-0`|焦点移到目录树(a，m，delete增改删)| |`cmd-t` `cmd-p`|查找文件| |`cmd-b`|在打开的文件之间切换| |`cmd-shift-b`|只搜索从上次commit后修改的文件| |`cmd-\`|显示或隐藏目录树|
+|`cmd-shift-o`|打开目录|
+|`cmd-t` `cmd-p`|查找文件|
+|`ctrl-0`|焦点移到目录树(a，m，delete增改删)|
+|`cmd-b`|在打开的文件之间切换|
+|`cmd-shift-b`|只搜索从上次commit后修改的文件|
+|`cmd-\`|显示或隐藏目录树|
 
 
 
@@ -74,7 +79,7 @@ tags: [Tool]
 |ctrl-shift-P|选取至上一行| |ctrl-shift-N|选取至下一样| |ctrl-shift-B|选取至前一个字符| |ctrl-shift-F|选取至后一个字符| |alt-shift-B, alt-shift-left|选取至字符开始| |alt-shift-F, alt-shift-right|选取至字符结束| |ctrl-shift-E, cmd-shift-right|选取至本行结束| |ctrl-shift-A, cmd-shift-left|选取至本行开始| |cmd-shift-up|选取至文件开始| |cmd-shift-down|选取至文件结尾| |cmd-A|全选| |cmd-L|选取一行，继续按回选取下一行| |ctrl-shift-W|选取当前单词| 
 
 * 编辑和删除文本
- 
+
 |快捷键|注释|
 |:---|:---|
 |ctrl-T|使光标前后字符交换| |cmd-J|将下一行与当前行合并| |ctrl-cmd-up, ctrl-cmd-down|使当前行向上或者向下移动| |cmd-shift-D|复制当前行到下一行| |cmd-K, cmd-U|使当前字符大写| |cmd-K, cmd-L|使当前字符小写| 
@@ -174,7 +179,7 @@ Atom -> Packages -> Settings View -> open
 
 切换到安装扩展 -> 搜索常用插件
 
-* 安装失败时点击插件去下载源码，放入 .atom/packages/ 文件夹 
+* 安装失败时点击插件去下载源码，放入 .atom/packages/ 文件夹
 
 ```
 // 运行
@@ -249,4 +254,3 @@ npm install XXX
 * http://blog.csdn.net/qq_30100043/article/details/53558381
 
 * [atom-terminal-panel](https://atom.io/packages/atom-terminal-panel)
-
