--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -118,3 +118,14 @@ brew install tmux
 ```
 
 详细使用参见[tmux使用](http://silverbulletzyp.github.io//tool/2016/09/26/iTerm2.html)
+
+
+## 7.HTTPie
+
+```
+brew install httpie
+```
+
+* 详见[httpie](https://github.com/jakubroztocil/httpie)
+
+
