--- a/_posts/2016-10-14-Mac App.md
+++ b/_posts/2016-10-14-Mac App.md
@@ -64,3 +64,15 @@ tags: [Tool]
 * ShadowsocksX
 
 
+
+## 关于破解软件不受信任无法打开的问题
+
+
+* 选择`系统偏好设置`-`安全性与隐私`，修改允许不明身份开发者
+
+* 若mac版本制约无信任选项，则键入以下内容放开权限
+
+```
+sudo spctl --master-disable
+```
+
