--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -129,3 +129,51 @@ brew install httpie
 * 详见[httpie](https://github.com/jakubroztocil/httpie)
 
 
+使用
+
+```
+http XXX
+```
+
+
+## 8.the_silver_searcher
+
+
+简称`Ag`，速度优于[ack](https://github.com/beyondgrep/ack2)，非常迅捷的代码搜索工具
+
+
+### 安装
+
+```
+brew install the_silver_searcher 
+// 或 
+brew install ag
+```
+
+
+### 相关介绍
+
+
+* 详见[the_silver_searcher](https://github.com/ggreer/the_silver_searcher)
+
+* [相关说明与性能图表](https://geoff.greer.fm/ag/)
+
+
+### 使用
+
+
+* 查看帮助
+
+```
+ag
+```
+
+
+* 使用
+
+```
+ag [FILE-TYPE] [OPTIONS] PATTERN [PATH]
+Example: ag -i foo /bar/
+``` 
+
+
