--- a/_posts/2017-08-05-AppCode.md
+++ b/_posts/2017-08-05-AppCode.md
@@ -27,3 +27,5 @@ AppCode默认自动补全对大小写敏感，如果需要取消敏感，在`Pre
 ### 2.其他
 
 * http://www.cocoachina.com/ios/20141031/10070.html
+
+* [license](http://intellij.mandroid.cn/)
