--- a/_posts/2017-08-05-AppCode.md
+++ b/_posts/2017-08-05-AppCode.md
@@ -21,10 +21,15 @@ AppCode是一个全新的`Objective-C`的集成开发环境，用于帮助开发
 
 ### 1.自动补全
 
-AppCode默认自动补全对大小写敏感，如果需要取消敏感，在`Preferences`->`Editor`—>`Code Completion`中对`Case sensitive completion`选择`None`，即可使大小写同时联想。
+AppCode默认自动补全对大小写敏感，如果需要取消敏感，在`Preferences`->`Editor`->`Code Completion`中对`Case sensitive completion`选择`None`，即可使大小写同时联想。
 
 
-### 2.其他
+### 2.自动换行
+
+AppCode默认不进行自动换行，如果需要像Xcode那样自动换行，在`Preferences`->`Editor`->`General`中对`Soft Wraps`下的`Use soft wraps in editor`进行勾选，即可进行自动换行。
+
+
+### 3.其他
 
 * http://www.cocoachina.com/ios/20141031/10070.html
 
