--- a/_posts/2017-08-05-AppCode.md
+++ b/_posts/2017-08-05-AppCode.md
@@ -29,6 +29,20 @@ AppCode默认自动补全对大小写敏感，如果需要取消敏感，在`Pre
 AppCode默认不进行自动换行，如果需要像Xcode那样自动换行，在`Preferences`->`Editor`->`General`中对`Soft Wraps`下的`Use soft wraps in editor`进行勾选，即可进行自动换行。
 
 
+### 3.编码方式不同
+
+AppCode编辑器基于Java，读写编译操作中用到编码方式包含Java，因此，在使用Xcode后转换AppCode，`project.pbxproj`会更换其中的编码方式，例如
+
+
+```
+// 其中会将Xcode默认的fileEncoding编码方式由1修改为4
+91E1E7681EA30C9F004EB4B6 /* SENSEME.lic */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = SENSEME.lic; sourceTree = "<group>"; };
+91E1E7701EA30C9F004EB4B6 /* VERSION */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = VERSION; sourceTree = "<group>"; };
+```
+
+因此在git提交时需要注意，是否会由于编码方式不同时导致更换编辑器环境出现冲突
+
+
 ### 3.其他
 
 * http://www.cocoachina.com/ios/20141031/10070.html
