--- a/_posts/2017-08-08-Music.md
+++ b/_posts/2017-08-08-Music.md
@@ -7,7 +7,7 @@ tags: [Interest]
 ---
 
 
-> 收录常听音乐
+> 收录常听音乐，及网易云音乐的好听歌单
 
 
 ## 纯音乐
@@ -31,3 +31,12 @@ tags: [Interest]
 * 梦中的雪
 * 风居住的街道
 * 神秘园之歌
+
+### 2.动感节奏
+
+
+## 外文
+
+### 1.原声
+
+### 2.翻唱版
