--- a/_posts/2017-08-08-Music.md
+++ b/_posts/2017-08-08-Music.md
@@ -15,17 +15,17 @@ tags: [Interest]
 ### 1.感化人心的世界名曲
 
 
-* 卡农
-* 雨的印记
-* 菊次郎的夏天
+* [卡农 - Pachelbel’s Canon](https://y.qq.com/n/yqq/song/000HuKJM21YDTr.html)
+* [雨的印记 - YIRUMA](https://y.qq.com/n/yqq/song/002Tbu2T159BI3.html)
+* [菊次郎的夏天 - 久石让](https://y.qq.com/n/yqq/song/0008ZMdD1Nad4i.html)
 * 雪之梦
 * 悲怆奏鸣曲第三乐章
 * 星空
 * 天空之城
 * 秋日私语
-* 克罗地亚狂想曲
+* [克罗地亚狂想曲 - Maksim Mrvica](http://music.163.com/#/song?id=1696373)
 * 梦中的婚礼
-* 夜的钢琴曲5
+* [夜的钢琴曲五 - 石进](http://music.163.com/#/song?id=490895842)
 * 寂静之声
 * 泪之曲
 * 梦中的雪
