--- a/_posts/2016-09-26-iTerm2.md
+++ b/_posts/2016-09-26-iTerm2.md
@@ -36,11 +36,10 @@ tags: [Tool]
 ### 常用快捷键
 
 |常用						|					|
-|`command + f`				|查找				|
-|`command + ;`				|自动补全				|
-|`ctrl + u`				|清空当前行				|
-|`command + shift + h`		|显示历史				|
-|`command + r`				|清屏				|
+|`command + f`				|查找|
+|`command + ;`				|自动补全|
+|`command + shift + h`		|显示历史|
+|`command + r`				|清屏|
 |窗口						|					|
 |`command + t`				|新建页面				|
 |`command + n`				|新建窗口				|
@@ -51,8 +50,21 @@ tags: [Tool]
 |`command + enter`			|切换全屏				|
 |`command + 数字`			|切换标签页			|
 |其他						|					|
-|`command + /`				|高亮当前鼠标的位置	|
-|`command + option + b`		|时间轴快照返回		|
+|`command + /`				|高亮当前鼠标的位置|
+|`command + option + b`		|时间轴快照返回|
+|`ctrl + u`|清除当前行|
+|`ctrl + a`|到行首|
+|`ctrl + e`|到行尾|
+|`ctrl + f/b` (相当于左右方向键)|前进后退|
+|`ctrl + p`|上一条命令|
+|`ctrl + r`|搜索命令历史|
+|`ctrl + d`|删除当前光标的字符|
+|`ctrl + h`|删除光标之前的字符|
+|`ctrl + w`|删除光标之前的单词|
+|`ctrl + k`|删除到文本末尾|
+|`ctrl + t`|交换光标处文本|
+|`command + r`|清屏1|
+|`ctrl + l`|清屏2|
 
 
 ## oh my zsh
