--- a/_posts/2016-10-14-Mac App.md
+++ b/_posts/2016-10-14-Mac App.md
@@ -85,8 +85,8 @@ sudo spctl --master-disable
 
 [Github地址](https://github.com/mstarke/MacPass)
 
-* 安装流程
 
+* 安装流程
 
 ```
 git clone https://github.com/mstarke/MacPass --recursive
@@ -102,4 +102,8 @@ git submodule init
 ```
 
 此时`spotlight`可以直接查找并启动`MacPass.app`
+
+* 附加插件
+
+[MacPassHTTP](https://github.com/MacPass/MacPassHTTP)
 
