--- a/_posts/2016-08-15-homebrew.md
+++ b/_posts/2016-08-15-homebrew.md
@@ -145,8 +145,8 @@ http XXX
 ### 安装
 
 ```
-brew install the_silver_searcher 
-// 或 
+brew install the_silver_searcher
+// 或
 brew install ag
 ```
 
@@ -174,58 +174,16 @@ ag
 ```
 ag [FILE-TYPE] [OPTIONS] PATTERN [PATH]
 Example: ag -i foo /bar/
-``` 
+```
 
 
 ## 9.Carthage
 
 
-第三方管理工具`Carthage`
-
-
-### 安装
-
 ```
-brew update
 brew install carthage
 ```
 
+详细使用参见[Carthage使用](http://silverbulletzyp.github.io//tool/2016/09/26/iTerm2.html)
 
-### 简介
-
-[Github地址](https://github.com/Carthage/Carthage.git)
-
-
-* 查看版本
-
-
-```
-carthage version
-```
-
-### 替代`Cocoapods`在项目中使用`Carthage`
-
-
-* 在项目中创建`Carthage`文件`Cartfile`
-
-```
-vim Cartfile
-```
-
-* 添加需使用的库
-
-```
-github "Alamofire/Alamofire" ~> 3.0
-github "SwiftyJSON/SwiftyJSON"
-```
-
-
-* 版本定义(同`Cocoapods`)
-
-```
-~> 3.0 表示使用版本3.0以上但是低于4.0的最新版本，如3.5, 3.9
-== 3.0 表示使用3.0版本
->= 3.0表示使用3.0或更高的版本
-// 不写明版本号则使用最新版
-```
 
