--- a/_posts/2017-08-15-Carthage.md
+++ b/_posts/2017-08-15-Carthage.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Cocoapods的兄弟Carthage
+title: Carthage安装及使用教程
 category: iOS
 tags: [iOS]
 
@@ -89,5 +89,31 @@ carthage update --platform iOS
 
 ### 与Cocoapods不同点
 
-`Carthage`创建的是去中心化的依赖管理器。它没有总项目的列表，这能够减少维护工作并且避免任何中心化带来的问题（如中央服务器宕机）。不过，这样也有一些缺点，就是项目的发现将更困难，用户将依赖于`Github`的趋势页面或者类似的代码库来寻找项目
+
+* `Carthage`只支持iOS 8及以上版本使用
+
+
+* 编译方式不同
+
+`CocoaPods`默认会自动创建并更新你的应用程序和所有依赖的`Xcode workspace`。`Carthage`使用`xcodebuild`来编译框架的二进制文件。`CocoaPods`的方法更易于集成，但`Carthage`更灵活并且是非侵入性的。
+
+
+* `Carthage`创建的是去中心化的依赖管理器
+
+
+它没有总项目的列表，这能够减少维护工作并且避免任何中心化带来的问题(如中央服务器宕机)。不过，这样也有一些缺点，就是项目的发现将更困难，用户将依赖于`Github`的趋势页面或者类似的代码库来寻找项目。
+
+
+* 依赖与耦合
+
+
+`CocoaPods`项目同时还必须包含一个`podspec`文件，里面是项目的配置及编译方式。`Carthage`使用`xcodebuild`来编译依赖，而不是将他们集成进一个`workspace`，因此无需类似的设定文件，不会使项目在文件框架上进行调整，不过依赖需要包含自己的`Xcode`工程文件来描述如何编译。
+
+
+* 总结
+
+
+创建`Carthage`的原因是想要一种尽可能简单的工具:一个只关心本职工作的依赖管理器，而不是取代部分`Xcode`的功能，或者需要让框架作者做一些额外的工作。`CocoaPods`提供的一些特性很棒，但由于附加的复杂性，它们将不会被包含在`Carthage`当中。
+
+
 
